--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Primer párrafo</h1>
-    <h1>Segundo párrafo</h1>
+    <h1>Sara Amenedo Miramontes</h1>
 </body>
 </html>
